<resources>
    <string name="app_name">Vizsgaremek</string>
    <string name="register">Regisztráció</string>
    <string name="lastname">Vezetéknév</string>
    <string name="firstname">Keresztnév</string>
    <string name="email">E-mail cím</string>
    <string name="password">Jelszó</string>
    <string name="login_here">Bejelentkezés</string>
    <string name="login">Bejelentkezés</string>
    <string name="register_here">Regisztráció</string>
    <string name="ezen_a_h_ten_megrendezett_esem_nyek">Ezen a héten megrendezett események</string>
    <string name="budapest">Budapest</string>
</resources>